--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -6,7 +6,7 @@ After=network.target redis-persistent.service redis-volatile.service
 Type=simple
 User=root
 Group=root
-ExecStart=/Users/sergio/Sources/gitlab-workspace/arancino-module/start.py
+ExecStart=<PATH TO ARANCINO MODULE>/start.py
 Restart=on-failure
 RestartSec=3
 #on-abort
