--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,12 @@ start:
     expire_in: 1d
 
 
+  except:
+    - branches
+    - master
+    - tags
+
+
 #################################
 #######      PACKAGE      #######
 #################################
