--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,8 +162,8 @@ upload:
     # DOWNLOAD
     #- curl -u $REPO_USR:$REPO_PWD -T tmp/$PKG_NAME.zip "${REPO_BASE_URL}/artifactory/${REPO_NAME}/${TARGET_PATH}/${PKG_NAME}.zip"
 
-  #dependencies:
-  #  - package_staging
+  dependencies:
+    - package
 
   only:
     - branches
