--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -163,7 +163,8 @@ upload:
     #- curl -u $REPO_USR:$REPO_PWD -T tmp/$PKG_NAME.zip "${REPO_BASE_URL}/artifactory/${REPO_NAME}/${TARGET_PATH}/${PKG_NAME}.zip"
 
   dependencies:
-    - package
+    - package_release
+    - package_staging
 
   only:
     - branches
