fix: setup extras file
fix #33

update version number 0.1.5

--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Arancino
-After=network.target, redis-persistent.service, redis-volatile.service
+After=network.target redis-persistent.service redis-volatile.service
 
 [Service]
 Type=simple
