upd: how to configure redis connection
upd: change setup package 11

upd: change setup package 12

upd: change setup package 13

upd: change setup package 14

upd: change setup package 15

upd: change setup package 16

upd: change setup package 17

upd: change setup package 18

upd: change setup package 19

upd: change setup package 20

upd: change setup package 21

upd: change setup package 22

upd: change setup package 23

upd: change setup package 24

upd: change setup package 25

upd: change setup package 26

--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -6,7 +6,9 @@ After=network.target redis-persistent.service redis-volatile.service
 Type=simple
 User=root
 Group=root
-ExecStart=<PATH TO ARANCINO MODULE>/start.py
+#ExecStart=<PATH TO ARANCINO MODULE>/start.py
+ExecStart=/usr/bin/python3 /usr/local/lib/python3.5/dist-packages/arancino/start.py
+ExecStop=/usr/kill $MAINPID
 Restart=on-failure
 RestartSec=3
 #on-abort
