--- a/config/setup.cfg
+++ b/config/setup.cfg
@@ -17,18 +17,20 @@ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations
 under the License
 '''
-import os
 
-ENV = os.environ.get('ARANCINOENV','PROD')
-
-if ENV == "PROD":
-    # PROD
-    from arancino.arancino_main import Arancino 
-    import arancino.arancino_constants as Const
-else:
-    # DEV
-    from arancino_main import Arancino
-    import arancino_constants as Const
-
-a = Arancino()
-a.start()
+[metadata]
+name = iotronic_lightningrod
+summary = Implementation of the Lightning-rod, the Stack4Things board-side probe
+description-file = README.md
+author = Sergio Tomasello
+author-email = sergio@smartme.io
+#home-page = 
+classifier =
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Information Technology
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: Apache Software License
+    Operating System :: Unix
+    Programming Language :: Python
+    Programming Language :: Python :: 3
