--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -8,7 +8,7 @@ version = 1.0.0
 # ##### NOT USED ######
 # Environment type: DEV, PROD. DEV automatically sets: redis.instance_type = VOLATILE, 
 # log.level = DEBUG, general.cycle_time = 5 and enables the console handlers
-env = DEV
+env = PROD
 
 #polling cycle time (in seconds) to discover new ports. 
 cycle_time = 10
@@ -25,7 +25,7 @@ allowed_hwid = [
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE
+instance_type = VOLATILE_PERSISTENT
 
 # default 'arancino port' configuration status
 [port]
@@ -43,8 +43,8 @@ hide = False
 baudrate = 4000000
 
 [log]
-#ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+# Accetpted values are: ERROR, WARNING, INFO, DEBUG
+level = INFO
 name = Arancino
 console = False
 
