--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -6,7 +6,13 @@ After=network.target redis-persistent.service redis-volatile.service
 Type=simple
 User=root
 Group=root
-#ExecStart=<PATH TO ARANCINO MODULE>/start.py
+
+#ARANCINO ENV VARS
+Environment="ARANCINO=/etc/arancino"
+Environment="ARANCINOCONF=/etc/arancino/config"
+Environment="ARANCINOLOG=/var/log/arancino"
+Environment="ARANCINOENV=PROD"
+
 ExecStart=/usr/bin/python3 /usr/local/lib/python3.5/dist-packages/arancino/start.py
 ExecStop=/usr/kill $MAINPID
 Restart=on-failure
