--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -13,7 +13,8 @@ Environment="ARANCINOCONF=/etc/arancino/config"
 Environment="ARANCINOLOG=/var/log/arancino"
 Environment="ARANCINOENV=PROD"
 
-ExecStart=/usr/bin/python3 /usr/local/lib/python3.5/dist-packages/arancino/start.py
+#ExecStart=/usr/bin/python3 /usr/local/lib/python3.5/dist-packages/arancino/start.py
+ExecStart=/usr/local/bin/arancino
 ExecStop=/usr/kill $MAINPID
 Restart=on-failure
 RestartSec=15
