--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,15 +73,18 @@ package_staging:
     - echo pypi-snapshot > tmp/repo_name.tmp    #il nome del repository
 
     #### prendo la versione dal file arancino.cfg, il setup.py la leggerà direttamente dal file arancino.cfg. cosi scrivo la versione in un solo punto
-    - DEVVER="$(cat config/arancino.cfg | grep 'version =')"  # prendo dal file arancino.cfg la versione: eg. => version = 1.0.1,
-    - NEWVER=$DEVVER.$VER                                  # concateno versione con versione di sviluppo
-    - sed -i "s/$DEVVER/$NEWVER/g" config/arancino.cfg     # nel file arancino.cfg sostituisco la versione: version = 1.0.1, => version = 1.0.1.20190318-170022-dev-a12def33
+    #- DEVVER="$(cat config/arancino.cfg | grep 'version =')"  # prendo dal file arancino.cfg la versione: eg. => version = 1.0.1,
+    #- NEWVER=$DEVVER.$VER                                  # concateno versione con versione di sviluppo
+    #- sed -i "s/$DEVVER/$NEWVER/g" config/arancino.cfg     # nel file arancino.cfg sostituisco la versione: version = 1.0.1, => version = 1.0.1.20190318-170022-dev-a12def33
+
 
     #### prendo la versione direttamente dal file setup.py
-    #- DEVVER="$(cat setup.py | grep version=)"  #prendo dal file arancino.cfg la versione: eg. => version='1.0.1',
-    #- NEWVERTMP=${DEVVER%??}                   #taglio gli ultimi due caratteri => ', => version='1.0.1
-    #- NEWVER="$NEWVERTMP.$VER',"                 #concateno le stringhe ed aggiunto i due caratteri tolti => version='1.0.1.20190318-170022-dev-a12def33',
-    #- sed -i "s/$DEVVER/$NEWVER/g" setup.py     #nel file setup.py sostituisco la versione: version='1.0.1', => version='1.0.1.20190318-170022-dev-a12def33',
+    - DEVVER="$(cat setup.py | grep version=)"  #prendo dal file arancino.cfg la versione: eg. => version='1.0.1',
+    - NEWVERTMP=${DEVVER%??}                   #taglio gli ultimi due caratteri => ', => version='1.0.1
+    - NEWVER="$NEWVERTMP.$VER',"                 #concateno le stringhe ed aggiunto i due caratteri tolti => version='1.0.1.20190318-170022-dev-a12def33',
+    - sed -i "s/$DEVVER/$NEWVER/g" setup.py     #nel file setup.py sostituisco la versione: version='1.0.1', => version='1.0.1.20190318-170022-dev-a12def33',
+
+    - echo $NEWVER
 
     - python3 setup.py sdist
     - ls dist/ > tmp/pgk_name.tmp               #ottengo il nome del file generato e salvo il nome del pacchetto su file temp
