--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -25,7 +25,7 @@ allowed_hwid = [
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE
+instance_type = VOLATILE_PERSISTENT
 
 # default 'arancino port' configuration status
 [port]
@@ -44,9 +44,9 @@ baudrate = 4000000
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+level = INFO
 name = Arancino
-console = True
+console = False
 
 log = arancino.log
 error = arancino.error.log
