--- a/config/setup.cfg
+++ b/config/setup.cfg
@@ -26,7 +26,7 @@ author = Sergio Tomasello
 author-email = sergio@smartme.io
 #home-page = 
 classifier =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Environment :: Console
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
