rest a mcu before connecting

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -25,7 +25,7 @@ allowed_hwid = [
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE_PERSISTENT
+instance_type = VOLATILE
 
 # default 'arancino port' configuration status
 [port]
@@ -40,13 +40,16 @@ auto_connect = False
 hide = False
 
 # default baudarate
-baudrate = 4000000
+serial_baudrate = 4000000
+
+# baudrate used for 'touch'
+reset_baudrate = 300
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = INFO
+level = DEBUG
 name = Arancino
-console = False
+console = True
 
 log = arancino.log
 error = arancino.error.log
