--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -1,6 +1,6 @@
 [metadata]
 
-version = 1.0.1
+version = 1.1.0
 
 
 [general]
@@ -13,22 +13,15 @@ env = PROD
 #polling cycle time (in seconds) to discover new ports. 
 cycle_time = 10
 
-# ##### NOT USED ######
-# allowed vid and pid to connect to. NOT USED
-allowed_hwid = [
-        'F00A:00FA',
-        '2A03:804E',
-        '2341:0043'
-        ]
-
 
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE
+instance_type = VOLATILE_PERSISTENT
+
 
 # default 'arancino port' configuration status
-[port]
+[port.serial]
 
 # automatically connect a new discovered port
 enabled = True
@@ -40,16 +33,43 @@ auto_connect = False
 hide = False
 
 # default baudarate
-serial_baudrate = 4000000
+comm_baudrate = 4000000
 
 # baudrate used for 'touch'
 reset_baudrate = 300
 
+# Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
+# EXCLUDE: excledus the ones in the list.
+# ONLY: acceptes only the ones in the list.
+# ALL: no filter, accepts all. This is the default filter type.
+filter_type=ONLY
+
+# List of VID:PID used to make a filter
+filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
+
+
+[port.test]
+# automatically connect a new discovered port
+enabled = True
+
+# set to true to make it not visible in the main device view in the UI
+hide = False
+
+# Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
+# EXCLUDE: excledus the ones in the list.
+# ONLY: acceptes only the ones in the list.
+# ALL: no filter, accepts all. This is the default filter type.
+filter_type=ALL
+
+# List of VID:PID used to make a filter
+filter_list = []
+
+
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+level = INFO
 name = Arancino
-console = True
+console = False
 
 log = arancino.log
 error = arancino.error.log
