add Arancino Test Port

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -53,7 +53,7 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 enabled = True
 
 # set to true to make it not visible in the main device view in the UI
-hide = False
+hide = True
 
 # Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
 # EXCLUDE: excledus the ones in the list.
@@ -63,6 +63,12 @@ filter_type=ALL
 
 # List of VID:PID used to make a filter
 filter_list = []
+
+# the number of port to create for test purpose
+num = 1
+
+# prefix of the id generated for the test port
+id_template = TESTPORT
 
 
 [log]
