upd: pam auth for protected api. list of enabled system user in cfg file.

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -1,6 +1,6 @@
 [metadata]
 
-version = 1.1.0
+version = 2.0.0
 
 
 [general]
@@ -14,20 +14,37 @@ env = PROD
 cycle_time = 10
 
 
+# List of enabled system users who can access protected api.
+users = ["me", "root"]
+
+
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
 instance_type = VOLATILE_PERSISTENT
-
+;instance_volatile_port = 6379
+;instance_persistent_port = 6380
+;
+;[redis.datastore]
+;instance_volatile_db = 0
+;instance_persistent_db = 0
+;#instance_volatile_persistent_db = 0
+;
+;[redis.devicestore]
+;instance_volatile_db = 1
+;instance_persistent_db = 1
+;instance_volatile_persistent_db = 0
+;
+;[redis.datastore_persistant]
+;instance_volatile_db = 0
+;instance_persistent_db = 0
+;instance_volatile_persistent_db = 1
 
 # default 'arancino port' configuration status
 [port.serial]
 
 # automatically connect a new discovered port
 enabled = True
-
-# ##### NOT USED ######
-auto_connect = False
 
 # set to true to make it not visible in the main device view in the UI
 hide = False
@@ -65,7 +82,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 3
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
@@ -75,8 +92,12 @@ id_template = TESTPORT
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
 level = INFO
 name = Arancino
-console = False
 
+# handlers
+console = True
+file = True
+
+# file handler filenames
 log = arancino.log
 error = arancino.error.log
 stats = arancino.stats.log
