--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -10,18 +10,23 @@ version = 2.0.0
 # log.level = DEBUG, general.cycle_time = 5 and enables the console handlers
 env = PROD
 
-#polling cycle time (in seconds) to discover new ports. 
+
+#polling cycle time (in seconds) to discover new ports.
 cycle_time = 10
 
 
 # List of enabled system users who can access protected api.
-users = ["me", "root"]
+users = ["sergio", "me", "root"]
+
+
+# folder for firmware to be flashed onto microcontroller.
+firmware_path = /tmp/arancino/firmware
 
 
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE_PERSISTENT
+instance_type = VOLATILE
 ;instance_volatile_port = 6379
 ;instance_persistent_port = 6380
 ;
@@ -59,7 +64,7 @@ reset_baudrate = 300
 # EXCLUDE: excledus the ones in the list.
 # ONLY: acceptes only the ones in the list.
 # ALL: no filter, accepts all. This is the default filter type.
-filter_type=ONLY
+filter_type=ALL
 
 # List of VID:PID used to make a filter
 filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
@@ -82,7 +87,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 3
+num = 1
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
