--- a/extras/redis-persistent.conf
+++ b/extras/redis-persistent.conf
@@ -246,7 +246,7 @@ dbfilename dump-persistent.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /var/run/redis
+dir /etc/redis/cwd
 
 ################################# REPLICATION #################################
 
