fix: redis connection

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -19,10 +19,6 @@ cycle_time = 10
 users = ["sergio", "me", "root"]
 
 
-# folder for firmware to be flashed onto microcontroller.
-firmware_path = /tmp/arancino/firmware
-
-
 [redis]
 
 # Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
@@ -44,6 +40,17 @@ instance_type = VOLATILE
 ;instance_volatile_db = 0
 ;instance_persistent_db = 0
 ;instance_volatile_persistent_db = 1
+
+# redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
+connection_attempts = 5
+
+[port]
+# folder for firmware to be flashed onto microcontroller.
+firmware_path = /tmp/arancino/firmware
+
+# allowed file extensions for firmware
+firmware_file_types = ["bin", "hex"]
+
 
 # default 'arancino port' configuration status
 [port.serial]
@@ -69,6 +76,41 @@ filter_type=ALL
 # List of VID:PID used to make a filter
 filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 
+# command to be spawn when upload api is called. The command could have one or more placeholders.
+#   available placeholder are: (each attributes of a Port class can used as placeholder)
+#
+# BASE PORT
+#   - port._id
+#   - port._device
+#   - port._port_type
+#   - port._library_version
+#   - port._m_b_creation_date
+#   - port._m_b_last_usage_date
+#   - port._m_s_plugged
+#   - port._m_s_connected
+#   - port._m_c_enabled
+#   - port._m_c_alias
+#   - port._m_c_hide
+#   - firmware
+#
+# SERIAL PORT
+#   - port.__baudrate = baudrate
+#   - port.__timeout = timeout
+#   - port.__m_p_vid
+#   - port.__m_p_pid
+#   - port.__m_p_name
+#   - port.__m_p_description
+#   - port.__m_p_hwid
+#   - port.__m_p_serial_number
+#   - port.__m_p_location
+#   - port.__m_p_manufacturer
+#   - port.__m_p_product
+#   - port.__m_p_interface
+#
+# OTHERS
+#   - firmware
+upload_command = /usr/bin/run-bossac-cli {port._device} {firmware}
+
 
 [port.test]
 # automatically connect a new discovered port
@@ -87,11 +129,13 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 2
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
 
+# command to be spawn when upload api is called. The command could have one or more placeholders.
+upload_command = ls -l {firmware}
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
