--- a/extras/redis-persistent.conf
+++ b/extras/redis-persistent.conf
@@ -592,7 +592,7 @@ slave-priority 100
 #
 # Please check http://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
 
