--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -114,7 +114,7 @@ upload_command = /usr/bin/run-bossac-cli {port._device} {firmware}
 
 [port.test]
 # automatically connect a new discovered port
-enabled = True
+enabled = False
 
 # set to true to make it not visible in the main device view in the UI
 hide = True
@@ -129,7 +129,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 2
+num = 0
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
@@ -139,7 +139,7 @@ upload_command = ls -l {firmware}
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = INFO
+level = DEBUG
 name = Arancino
 
 # handlers
