fix typo, fix: rest api

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -55,7 +55,7 @@ firmware_file_types = ["bin", "hex"]
 # default 'arancino port' configuration status
 [port.serial]
 
-# automatically connect a new discovered port
+# automatically enable (and connect) a new discovered port
 enabled = True
 
 # set to true to make it not visible in the main device view in the UI
@@ -113,8 +113,8 @@ upload_command = /usr/bin/run-bossac-cli {port._device} {firmware}
 
 
 [port.test]
-# automatically connect a new discovered port
-enabled = False
+# automatically enable (and connect) a new discovered port
+enabled = True
 
 # set to true to make it not visible in the main device view in the UI
 hide = True
@@ -129,7 +129,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 0
+num = 1
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
@@ -139,12 +139,12 @@ upload_command = ls -l {firmware}
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+level = INFO
 name = Arancino
 
 # handlers
 console = True
-file = True
+file = False
 
 # file handler filenames
 log = arancino.log
