upd: reset baudrate from config file + some clean and organization

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -16,7 +16,7 @@ cycle_time = 10
 
 
 # List of enabled system users who can access protected api.
-users = ["sergio", "me", "root"]
+users = ["me", "root"]
 
 
 [redis]
@@ -64,7 +64,7 @@ hide = False
 # default baudarate
 comm_baudrate = 4000000
 
-# baudrate used for 'touch'
+# baudrate used for 'touch' reset
 reset_baudrate = 300
 
 # Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
@@ -135,16 +135,16 @@ num = 1
 id_template = TESTPORT
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
-upload_command = ls -l {firmware}
+upload_command =
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = INFO
+level = DEBUG
 name = Arancino
 
 # handlers
 console = True
-file = False
+file = True
 
 # file handler filenames
 log = arancino.log
