fix #54 for a more accurate redis configuration in arancino config file

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -10,10 +10,8 @@ version = 2.0.0
 # log.level = DEBUG, general.cycle_time = 5 and enables the console handlers
 env = PROD
 
-
 #polling cycle time (in seconds) to discover new ports.
 cycle_time = 10
-
 
 # List of enabled system users who can access protected api.
 users = ["me", "root"]
@@ -21,28 +19,43 @@ users = ["me", "root"]
 
 [redis]
 
-# Accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-instance_type = VOLATILE
-;instance_volatile_port = 6379
-;instance_persistent_port = 6380
-;
-;[redis.datastore]
-;instance_volatile_db = 0
-;instance_persistent_db = 0
-;#instance_volatile_persistent_db = 0
-;
-;[redis.devicestore]
-;instance_volatile_db = 1
-;instance_persistent_db = 1
-;instance_volatile_persistent_db = 0
-;
-;[redis.datastore_persistant]
-;instance_volatile_db = 0
-;instance_persistent_db = 0
-;instance_volatile_persistent_db = 1
+# redis server host
+host = localhost
+
+# redis server port of volatile instance
+port_volatile = 6379
+
+# redis server port of persistent instance
+port_persistent = 6380
+
+# decode response in redis connectetion
+decode_response = True
+
+# policy for data storage: accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
+# VOLATILE:
+instance_type = VOLATILE_PERSISTENT
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
+
+[redis.volatile]
+
+datastore_std_db = 0
+datastore_dev_db = 1
+datastore_per_db = 2
+
+[redis.persistent]
+
+datastore_std_db = 0
+datastore_dev_db = 1
+datastore_per_db = 2
+
+[redis.volatile_persistent]
+
+datastore_std_db = 0
+datastore_dev_db = 0
+datastore_per_db = 1
+
 
 [port]
 # folder for firmware to be flashed onto microcontroller.
@@ -129,7 +142,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
@@ -139,11 +152,11 @@ upload_command =
 
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+level = INFO
 name = Arancino
 
 # handlers
-console = True
+console = False
 file = True
 
 # file handler filenames
