del: user list in config, upd: flask loggers, del: stats file

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -13,9 +13,6 @@ env = PROD
 #polling cycle time (in seconds) to discover new ports.
 cycle_time = 10
 
-# List of enabled system users who can access protected api.
-users = ["me", "root"]
-
 
 [redis]
 
@@ -156,10 +153,11 @@ level = INFO
 name = Arancino
 
 # handlers
-console = False
-file = True
+handler_console = False
+handler_file = True
 
 # file handler filenames
-log = arancino.log
-error = arancino.error.log
-stats = arancino.stats.log
+#file_base = arancino.base.log
+file_log = arancino.log
+file_error = arancino.error.log
+#file_stats = arancino.stats.log
