upd: better log configuration

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -152,6 +152,12 @@ upload_command =
 level = INFO
 name = Arancino
 
+# Size in MBytes only for file handler. Min: 1, Max: 5, Default: 1
+size = 1
+
+# Number of files to use in rotate mode. Min: 1, Max: 10, Default: 1
+rotate = 1
+
 # handlers
 handler_console = False
 handler_file = True
