--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -141,6 +141,10 @@ filter_list = []
 # the number of port to create for test purpose
 num = 0
 
+# delay between each command in seconds (accept float). Default 500ms
+
+delay = 0.5
+
 # prefix of the id generated for the test port
 id_template = TESTPORT
 
