--- a/extras/redis-persistent.service
+++ b/extras/redis-persistent.service
@@ -14,6 +14,7 @@ Group=redis
 RunTimeDirectory=redis
 
 ExecStartPre=-/bin/run-parts --verbose /etc/redis/redis-server.pre-up.d
+ExecStartPre=-/etc/redis/fix-aof.sh
 ExecStartPost=-/bin/run-parts --verbose /etc/redis/redis-server.post-up.d
 ExecStop=-/bin/run-parts --verbose /etc/redis/redis-server.pre-down.d
 ExecStop=/bin/kill -s TERM $MAINPID
