fix placeholder for port upload op

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -104,8 +104,9 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 #   - firmware
 #
 # SERIAL PORT
-#   - port.__baudrate = baudrate
-#   - port.__timeout = timeout
+#   - port.__comm_baudrate
+#   - port.__reset_baudrate
+#   - port.__timeout
 #   - port.__m_p_vid
 #   - port.__m_p_pid
 #   - port.__m_p_name
@@ -119,6 +120,7 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 #
 # OTHERS
 #   - firmware
+
 upload_command = /usr/bin/run-bossac-cli {port._device} {firmware}
 
 
@@ -156,15 +158,15 @@ upload_command =
 level = INFO
 name = Arancino
 
+# handlers
+handler_console = False
+handler_file = True
+
 # Size in MBytes only for file handler. Min: 1, Max: 5, Default: 1
 size = 1
 
 # Number of files to use in rotate mode. Min: 1, Max: 10, Default: 1
 rotate = 1
-
-# handlers
-handler_console = False
-handler_file = True
 
 # file handler filenames
 #file_base = arancino.base.log
