fix: introduce timeout in serial connection

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -86,6 +86,9 @@ filter_type=ALL
 # List of VID:PID used to make a filter
 filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 
+# Timeout in seconds in serial connection Min: 1
+timeout = 1
+
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 #   available placeholder are: (each attributes of a Port class can used as placeholder)
 #
@@ -123,7 +126,6 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 
 upload_command = /usr/bin/run-bossac-cli {port._device} {firmware}
 
-
 [port.test]
 # automatically enable (and connect) a new discovered port
 enabled = True
@@ -145,7 +147,7 @@ num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
 
-delay = 0.5
+delay = 5.5
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
