add: differente cfg file based on ENV

--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -27,7 +27,7 @@ decode_response = True
 
 # policy for data storage: accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
 # VOLATILE:
-instance_type = VOLATILE_PERSISTENT
+instance_type = VOLATILE
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
@@ -153,7 +153,7 @@ filter_type=ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 0
+num = 1
 
 # delay between each command in seconds (accept float). Default 500ms
 
@@ -173,7 +173,7 @@ level = DEBUG
 name = Arancino
 
 # handlers
-handler_console = False
+handler_console = True
 handler_file = True
 
 # Size in MBytes only for file handler. Min: 1, Max: 5, Default: 1
