--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ image: digitalgenius/alpine-python3-pg
 
 stages:
   - start
+  - code_quality
   - package
   - upload
   - cleanup
@@ -53,6 +54,29 @@ start:
 
   except:
     - master
+
+#################################
+#######      QUALITY      #######
+#################################
+
+#######    Code Quality   #######
+
+code_quality:
+  image: docker:stable
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  script:
+    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - docker run
+        --env SOURCE_CODE="$PWD"
+        --volume "$PWD":/code
+        --volume /var/run/docker.sock:/var/run/docker.sock
+        "registry.gitlab.com/gitlab-org/ci-cd/codequality:$SP_VERSION" /code
+  artifacts:
+      paths: [gl-code-quality-report.json]
 
 #################################
 #######      PACKAGE      #######
