feat: filter of  ports based on vid and pid

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -16,10 +16,10 @@ cycle_time = 10
 # ##### NOT USED ######
 # allowed vid and pid to connect to. NOT USED
 allowed_hwid = [
-        'F00A:00FA',
-        '2A03:804E',
-        '2341:0043'
-        ]
+                "04D8:ECDA",
+                "2A03:804E",
+                "2341:0043"
+        ] 
 
 
 [redis]
