upd: #79 parametric reset port on connect

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -69,6 +69,10 @@ firmware_path = /tmp/arancino/firmware
 firmware_file_types = ["bin", "hex"]
 
 
+# reset port on connection
+reset_on_connect = True
+
+
 #------------------------------------------------------------------------------------------
 [port.serial]
 # default 'arancino port' configuration status
@@ -135,6 +139,9 @@ timeout = 1
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
 
+# reset port on connection, override the default configuration
+reset_on_connect = True
+
 #------------------------------------------------------------------------------------------
 [port.test]
 # automatically enable (and connect) a new discovered port
@@ -165,6 +172,8 @@ id_template = TESTPORT
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 upload_command =
 
+# reset port on connection, override the default configuration
+reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
 [log]
