--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -32,7 +32,6 @@ instance_type = VOLATILE
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
 
-
 #------------------------------------------------------------------------------------------
 [redis.volatile]
 
@@ -68,6 +67,8 @@ firmware_path = /tmp/arancino/firmware
 # allowed file extensions for firmware
 firmware_file_types = ["bin", "hex"]
 
+# reset port on connection
+reset_on_connect = True
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -134,6 +135,8 @@ timeout = 1
 
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
+# reset port on connection, override the default configuration
+reset_on_connect = True
 
 #------------------------------------------------------------------------------------------
 [port.test]
@@ -165,6 +168,8 @@ id_template = TESTPORT
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 upload_command =
 
+# reset port on connection, this override the default configuration
+reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
 [log]
@@ -173,7 +178,7 @@ level = DEBUG
 name = Arancino
 
 # handlers
-handler_console = True
+handler_console = False
 handler_file = True
 
 # Size in MBytes only for file handler. Min: 1, Max: 5, Default: 1
