add: uptime metadata for each port

--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -178,7 +178,7 @@ level = DEBUG
 name = Arancino
 
 # handlers
-handler_console = False
+handler_console = True
 handler_file = True
 
 # Size in MBytes only for file handler. Min: 1, Max: 5, Default: 1
