--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -1,6 +1,6 @@
 [metadata]
 
-version = 1.2.0
+version = 1.2.1
 
 
 [general]
@@ -17,6 +17,7 @@ cycle_time = 10
 # allowed vid and pid to connect to. NOT USED
 allowed_hwid = [
                 "04D8:ECDA",
+                "04D8:ECD9",
                 "2A03:804E",
                 "2341:0043"
         ]
