nuova policy di generazione pacchetti: solo su tag (semver) più pulizia

--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -1,9 +1,3 @@
-[metadata]
-
-version = 2.0.0
-
-
-#------------------------------------------------------------------------------------------
 [general]
 
 #polling cycle time (in seconds) to discover new ports.
@@ -22,10 +16,10 @@ port_volatile = 6379
 # redis server port of persistent instance
 port_persistent = 6380
 
-# decode response in redis connectetion
+# decode response in redis connection
 decode_response = True
 
-# policy for data storage: accetpted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
+# policy for data storage: accepted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
 # VOLATILE:
 instance_type = VOLATILE
 
